Remove inputcapture if eis client disconnects

Otherwise input can get stuck because the client may base its decision to
release the capture on the input event it receives.
BUG:492516